# LeagueSwissStageProbability

./: .gitignore  CLAUDE.md  README.md  SUMMARY.md  pyproject.toml  run.py  test_swiss.py
src/: __init__.py  cli.py  models.py  swiss_engine.py  worlds_2025_data.py
tests/: __init__.py  test_detailed_pairings.py  test_final.py  test_interactive_probability.py  test_probability.py
