[project]
name = "league-swiss-stage"
version = "1.0.0"
description = "英雄联盟世界赛瑞士轮抽签概率统计软件"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]

[project.scripts]
swiss = "src.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true